--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,9 @@ dependencies {
     api 'org.jsoup:jsoup:1.10.2'
     api 'com.android.support:cardview-v7:27.1.1'
     api 'com.github.bumptech.glide:glide:4.8.0'
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
 }
