--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
@@ -17,7 +16,7 @@
         <activity android:name=".tab.MainActivity">
         </activity>
         <activity android:name=".voiceplay.VoiceActivity" />
-        <activity android:name=".shelf.FavoriteActivity" />
+        <activity android:name=".favoriteArticle.FavoriteActivity" />
         <activity android:name=".launchactivity.launchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
